# llm-windows-setup

./: .gitattributes  .gitignore  CLAUDE.md  Install-LlmTools.ps1  README.md
context/: context.py
hooks/: pre-commit
integration/: llm-integration.ps1
llm-template/: assistant.yaml  code.yaml
llm-tools-context/: README.md  llm_tools_context.py  pyproject.toml
tests/: test-context-system.ps1
